--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp": "^3.9.1",
     "gulp-clean-css": "^4.0.0",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-imagemin": "^5.0.3",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.2",
     "popper.js": "^1.14.6"
