--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "browser-sync": "^2.26.3",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^4.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^5.0.3",
     "gulp-pug": "^4.0.1",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.1",
     "popper.js": "^1.14.6"
   }
 }
